--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@ project(chip-8
     DESCRIPTION "Chip-8 Interpreter"
     LANGUAGES CXX)
 
+find_package(SDL3 REQUIRED CONFIG REQUIRED COMPONENTS SDL3-shared)
+
 add_executable(chip-8
+	WIN32
 	main.cpp)
 
+target_link_libraries(chip-8 PRIVATE SDL3::SDL3)
